# OJS_Script_maker_NG

./: .gitignore  2024-Submerged-Ashburn-script.html  2025-vadc-fll-challenge-Unearthed-ojs-Norfolk-div1.xlsm  2025-vadc-fll-challenge-tbd-ojs-Smallville-Div1.xlsm.FILLED  2025-vadc-fll-challenge-tbd-ojs-Smallville-Div2.xlsm.FILLED  2025-vadc-fll-challenge-tbd-ojs-smallville-div1.xlsm  2025-vadc-fll-challenge-tbd-ojs-smallville-div1.xlsm.backup  2025-vadc-fll-challenge-tbd-ojs-smallville-div2-filled.xlsm  2025-vadc-fll-challenge-tbd-ojs-smallville-div2.xlsm  2025-vadc-fll-challenge-tbd-ojs-smallville-div2.xlsm.backup  DOWNLOADING.md  README.md  build-tournament-folders.spec  check-setup.py  check-setup.spec  index.html  lock-workbooks.py  requirements.txt  sample_config.json5  script-maker-mac-win.spec  script-maker-win.spec  script_maker-win.spec  script_maker.py  script_maker.spec  script_maker_path.spec  script_template.html.jinja  unlock-workbooks.py  vadc-fll-ojs-manager.spec  write_json5.py
2025-all/: .gitignore  2025-Qualifier-Template - Copy.xlsm  2025-Qualifier-Template.xlsm  2025-vadc-fll-challenge-Unearthed-ojs-Norfolk-closing-ceremony.html  2025-vadc-fll-challenge-Unearthed-ojs-Norfolk-div1.xlsm  2025-vadc-fll-challenge-Unearthed-ojs-Norfolk-div2.xlsm  2025-vadc-fll-challenge-Unearthed-ojs-norfolk-fillin-form.html  2025-vadc-fll-challenge-Unearthed-ojs-norfolk-summary.html  2025-vadc-fll-challenge-Unearthed-ojs-norfolk.xlsm  README.md  README_TROUBLESHOOTING.md  build-tournament-folders.py  closing-ceremony-script-generator.py  fillin_template.html.jinja  (+19 more)
(+92 files in other folders)
