[project]
name = "ojs-tournament-builder"
version = "2.0.0"
description = "Automated tool to prepare per-tournament folders and populate OJS spreadsheets"
authors = [
    {name = "MrGibbage"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "colorama>=0.4.6",
    "xlwings>=0.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (handled by black)

[project.scripts]
build-tournaments = "build-tournament-folders:main"
